# fastapi-todo-app

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.py  database.py  dev.sh  docker-compose-bk.yml  docker-compose.yml  gunicorn.conf.py  loki-config.yaml  main.py  migrate.sh  monitoring.py  prometheus-rules.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run-docker.example.sh  run-docker.sh  run.sh  tempo.yaml  tracing.py
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 13fcf33e3197_create_test_column_for_user_column.py  1e458ba90866_create_phone_number_for_user_column.py
grafana/dashboards/: dashboard.yml  fastapi_dashboard.json
grafana/datasources/: loki.yml  prometheus.yml  tempo.yml
routers/: admin.py  auth.py  todos.py  users.py
templates/: home.html  login.html  register.html
test/: test_admin.py  test_auth.py  test_example.py  test_todos.py  test_user.py  utils.py
